Actualización mobile.css: oculta barra negra y ajusta botón WhatsApp

--- a/checkout.html
+++ b/checkout.html
@@ -92,9 +92,9 @@
 
     <!-- 🛒 Carrito -->
     <div class="checkout-cart">
-      <h3>🛒 Tu carrito</h3>
-      <ul id="checkoutCart"></ul>
-    </div>
+  <h3><i class="fas fa-shopping-cart"></i> Tu carrito</h3>
+  <ul id="checkoutCart"></ul>
+</div>
 
     <!-- Datos de envío -->
     <form id="checkoutForm" method="POST" class="checkout-form">
