--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
   </div>
 </div>
 
-
-
   <!-- Header -->
   <header class="header">
     <a href="index.html" class="logo">
@@ -91,20 +89,46 @@
   </div>
 </nav>
 
-    <!-- Contenedor buscador + hamburguesa -->
+<!-- Contenedor buscador + hamburguesa + carrito -->
 <div class="search-hamburger">
+  
   <!-- Buscador -->
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar productos...">
     <button id="searchBtn" class="search-btn" aria-label="Buscar">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor" width="20" height="20">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
       </svg>
     </button>
   </div>
 
-  <!-- Botón hamburguesa que envía a otra página -->
-<a href="menu.html" class="hamburger">☰</a>
+<!-- Botón de menú combinado: tres puntos verticales a la izquierda + hamburguesa a la derecha -->
+<a href="menu.html" class="hamburger-combined-btn" aria-label="Menú">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" aria-hidden="true" focusable="false">
+    <!-- puntos verticales (izquierda) -->
+    <circle cx="6"  cy="7"  r="1.2" />
+    <circle cx="6"  cy="14" r="1.2" />
+    <circle cx="6"  cy="21" r="1.2" />
+    <!-- líneas hamburguesa (derecha) -->
+    <line x1="10" y1="7"  x2="22" y2="7"  stroke-width="2" stroke-linecap="round" />
+    <line x1="10" y1="14" x2="22" y2="14" stroke-width="2" stroke-linecap="round" />
+    <line x1="10" y1="21" x2="22" y2="21" stroke-width="2" stroke-linecap="round" />
+  </svg>
+</a>
+
+  <!-- Carrito con bordes más redondeados -->
+<button class="cart-btn" aria-label="Carrito">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+    fill="none" stroke="currentColor" stroke-width="1.8"
+    stroke-linecap="round" stroke-linejoin="round" width="26" height="26">
+    <path d="M6 6h15l-1.5 9h-12z" />
+    <circle cx="9" cy="20" r="1.5" />
+    <circle cx="18" cy="20" r="1.5" />
+    <path d="M6 6L5 3H2" />
+  </svg>
+</button>
 
 </div>
 
@@ -151,7 +175,7 @@
     <img src="img/zapatillas Deportivas.jpg" alt="Zapatilla Deportiva">
   </div>
   <h3>Zapatilla Deportiva</h3>
-  <p>S/ 119.00</p>
+  <p>S/ 119.00</p> 
   <button class="btn">Agregar al carrito</button>
 </div>
 
