Ajustes en el buscador móvil y menú de categorías

--- a/checkout.html
+++ b/checkout.html
@@ -49,23 +49,29 @@
   </style>
 </head>
 <body>
-
+  
   <!-- Barra superior -->
   <div class="top-bar">
-    <div class="top-left">
-      <span>🚚 Envío gratis</span>
-    </div>
-    <div class="top-center">
-      <div class="marquee-vertical">
-        <div class="marquee-item">✨ Especial para ti</div>
-        <div class="marquee-item">✅ Entrega garantizada</div>
-        <div class="marquee-item">🔄 Devoluciones hasta 90 días</div>
-      </div>
-    </div>
-    <div class="top-right">
-      <span>📲 Descarga la app de WALOX</span>
+  <div class="top-left">
+    <span><i class="fas fa-truck"></i> Envío gratuito</span>
+  </div>
+
+  <div class="separator">|</div>
+
+  <div class="top-center">
+    <div class="marquee-vertical">
+      <div class="marquee-item"><i class="fas fa-star"></i> Ofertas exclusivas para ti</div>
+      <div class="marquee-item"><i class="fas fa-check-circle"></i> Entrega garantizada</div>
+      <div class="marquee-item"><i class="fas fa-rotate"></i> Devoluciones hasta 90 días</div>
     </div>
   </div>
+
+  <div class="separator">|</div>
+
+  <div class="top-right">
+    <span><i class="fas fa-mobile-alt"></i> Descarga nuestra app</span>
+  </div>
+</div>
 
   <!-- Header -->
   <header class="header">
@@ -76,7 +82,6 @@
       <a href="index.html">Inicio</a>
       <a href="#">Productos</a>
       <a href="#">Ofertas</a>
-      <a href="#">Contacto</a>
     </nav>
     <div class="icons">
       <a href="checkout.html" class="cart">
