--- a/menu.html
+++ b/menu.html
@@ -47,6 +47,20 @@
   </svg>
 </a>
 
+<!-- Botón de usuario / inicio de sesión -->
+<div class="user-menu mobile-only">
+  <button class="user-btn" aria-label="Usuario">
+<!-- Icono humano -->
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
+      <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+    </svg>  </button>
+  
+  <div class="user-dropdown">
+    <a href="iniciar sesion-registrarse.html">Iniciar sesión / Registrarse</a>
+    <!-- Aquí puedes añadir más links para usuarios logueados si quieres -->
+  </div>
+</div>
+
   <!-- Carrito con bordes más redondeados -->
 <button class="cart-btn" aria-label="Carrito">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
@@ -62,23 +76,9 @@
 </div>
 
   </header>
-  <!-- Menú vertical debajo del header -->
-<nav class="side-menu">
-  <ul>
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Ropa</a></li>
-    <li><a href="#">Electrónica</a></li>
-    <li><a href="#">Hogar</a></li>
-    <li><a href="#">Juguetes</a></li>
-    <li><a href="#">Deportes</a></li>
-    <li><a href="#">Ofertas</a></li>
-    <li><a href="#">Novedades</a></li>
-  </ul>
-</nav>
+  
 
-  <main>
-    <p>Aquí irá el contenido del menú.</p>
-  </main>
+
   <body class="menu-page">
     
 
