--- a/menu.html
+++ b/menu.html
@@ -20,7 +20,7 @@
   </svg>
 </a>
 
-  <!-- Buscador -->
+
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar productos...">
     <button id="searchBtn" class="search-btn" aria-label="Buscar">
@@ -34,7 +34,7 @@
 
 
 <!-- Botón de menú combinado: tres puntos verticales a la izquierda + hamburguesa a la derecha -->
-<a href="menu.html" class="hamburger-combined-btn" aria-label="Menú">
+<a class="hamburger-combined-btn" aria-label="Menú">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" aria-hidden="true" focusable="false">
     <!-- puntos verticales (izquierda) -->
     <circle cx="6"  cy="7"  r="1.2" />
