--- a/electronica.html
+++ b/electronica.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>WALOX Store - Electrónica</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
 
 <!-- Favicon -->
 <link rel="icon" href="icons/favicon-32x32-WALOX.png">
@@ -91,46 +92,114 @@
 </div>
 
 <!-- Header -->
-<header class="header">
-  <a href="index.html" class="logo">
-    <img src="icons/Walox-logo.png" alt="WALOX Logo">
-  </a>
+  <header class="header">
+    <a href="index.html" class="logo">
+      <img src="icons/Walox-logo.png" alt="WALOX Logo">
+    </a>
 
-  <nav class="nav">
-    <a href="#"><i class="fas fa-thumbs-up"></i> Artículos más vendidos</a>
-    <a href="index.html">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Ofertas</a>
-    <a href="#">Contacto</a>
+    
+  
+   <nav class="nav" id="nav-menu">
+  <a href="#"><i class="fas fa-thumbs-up"></i> Artículos más vendidos</a>
+  <a href="#" class="rating"><i class="fas fa-star"></i> 5 estrellas</a>
+  <a href="#">Lo nuevo</a>
+  <a href="iniciar sesion-registrarse.html">Registrarse</a>
 
-    <!-- Dropdown -->
-    <div class="dropdown-wrapper">
-      <a href="javascript:void(0);" class="categorias">Categorías <i class="fas fa-chevron-down"></i></a>
-      <div class="dropdown-categorias">
-        <a href="ropa.html">Ropa</a>
-        <a href="electronica.html">Electrónica</a>
-        <a href="hogar.html">Hogar</a>
-        <a href="juguetes.html">Juguetes</a>
-        <a href="deportes.html">Deportes</a>
-      </div>
+  <!-- Dropdown Categorías -->
+  <div class="dropdown-wrapper">
+    <a href="javascript:void(0);" class="categorias">Categorías <i class="fas fa-chevron-down"></i></a>
+    <div class="dropdown-categorias">
+      <a href="ropa.html">Ropa</a>
+      <a href="electronica.html">Electrónica</a>
+      <a href="hogar.html">Hogar</a>
+      <a href="juguetes.html">Juguetes</a>
+      <a href="deportes.html">Deportes</a>
+      <a href="accesorios.html">Accesorios</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
+<!-- Contenedor buscador + hamburguesa + carrito -->
+<div class="search-hamburger">
+  
   <!-- Buscador -->
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Buscar productos...">
-    <button id="searchBtn" class="search-btn">
-      <i class="fas fa-search"></i>
+    <button id="searchBtn" class="search-btn" aria-label="Buscar">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor" width="20" height="20">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
+      </svg>
     </button>
   </div>
 
-  <div class="icons">
-    <a href="#" class="help"><i class="fas fa-question-circle"></i></a>
-    <a href="checkout.html" class="cart">
-      <i class="fas fa-shopping-cart"></i>
-      <span class="cart-count">0</span>
-    </a>
+<!-- Botón de menú combinado: tres puntos verticales a la izquierda + hamburguesa a la derecha -->
+<a href="menu.html" class="hamburger-combined-btn" aria-label="Menú">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" width="28" height="28" aria-hidden="true" focusable="false">
+    <!-- puntos verticales (izquierda) -->
+    <circle cx="6"  cy="7"  r="1.2" />
+    <circle cx="6"  cy="14" r="1.2" />
+    <circle cx="6"  cy="21" r="1.2" />
+    <!-- líneas hamburguesa (derecha) -->
+    <line x1="10" y1="7"  x2="22" y2="7"  stroke-width="2" stroke-linecap="round" />
+    <line x1="10" y1="14" x2="22" y2="14" stroke-width="2" stroke-linecap="round" />
+    <line x1="10" y1="21" x2="22" y2="21" stroke-width="2" stroke-linecap="round" />
+  </svg>
+</a>
+
+<!-- Botón de usuario / inicio de sesión -->
+<div class="user-menu mobile-only">
+  <button class="user-btn" aria-label="Usuario">
+<!-- Icono humano -->
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
+      <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/>
+    </svg>  </button>
+  
+  <div class="user-dropdown">
+    <a href="iniciar sesion-registrarse.html">Iniciar sesión / Registrarse</a>
+    <!-- Aquí puedes añadir más links para usuarios logueados si quieres -->
   </div>
+</div>
+
+
+  <!-- Carrito con bordes más redondeados -->
+<button class="cart-btn" aria-label="Carrito" onclick="window.location.href='checkout.html'">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+    fill="none" stroke="currentColor" stroke-width="1.8"
+    stroke-linecap="round" stroke-linejoin="round" width="26" height="26">
+    <path d="M6 6h15l-1.5 9h-12z" />
+    <circle cx="9" cy="20" r="1.5" />
+    <circle cx="18" cy="20" r="1.5" />
+    <path d="M6 6L5 3H2" />
+  </svg>
+</button>
+
+
+</div>
+
+    <div class="icons">
+
+      <a href="checkout.html" class="cart" aria-label="Carrito">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2S15.9 22 17 22s2-.9 2-2-.9-2-2-2zM7.2 14l.8-2h9c.7 0 1.4-.4 1.7-1l3.6-6.5A1 1 0 0 0 21.5 3H5.2L4.3 1H1v2h2l3.6 7.6-1.3 2.4C4.5 14.4 5.5 16 7 16h12v-2H7.4c-.1 0-.3-.1-.3-.3v-.1z"/>
+        </svg>
+        <span class="cart-count">0</span>
+      </a>
+    </div>
+  </header>
+
+<!-- Menú de categorías móvil -->
+<div class="category-scroll mobile-only">
+  <a href="index.html" class="category-item">Todos</a>
+  <a href="ropa.html" class="category-item">Ropa</a>
+  <a href="electronica.html" class="category-item active">Electrónica</a>
+  <a href="hogar.html" class="category-item">Hogar</a>
+  <a href="juguetes.html" class="category-item">Juguetes</a>
+  <a href="deportes.html" class="category-item">Deportes</a>
+  <a href="accesorios.html" class="category-item">Accesorios</a>
+</div>
+
 </header>
 
 <!-- Hero -->
