--- a/accesorios.html
+++ b/accesorios.html
@@ -217,9 +217,12 @@
   </div>
 </footer>
 
-<a href="https://wa.me/51994240571" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-  <i class="fab fa-whatsapp"></i>
-</a>
+<!-- WhatsApp flotante -->
+  <a href="https://wa.me/51994240571" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="40" height="40">
+      <path d="M12.04 2C6.5 2 2 6.48 2 12c0 2.1.54 4.1 1.6 5.9L2 22l4.2-1.5C8 21.5 10 22 12 22c5.52 0 10-4.48 10-10s-4.48-10-10-10zm0 18c-1.8 0-3.6-.5-5.1-1.5l-.4-.2-2.5.9.9-2.4-.3-.5C4.9 15.2 4.5 13.6 4.5 12c0-4.15 3.35-7.5 7.5-7.5S19.5 7.85 19.5 12s-3.35 7.5-7.5 7.5zm4.4-5.6c-.25-.13-1.5-.74-1.7-.82-.23-.08-.4-.13-.56.13s-.65.82-.8.98c-.15.16-.3.18-.55.06-.25-.13-1.05-.39-2-1.26-.74-.65-1.24-1.45-1.39-1.7-.15-.26-.02-.4.11-.52.11-.11.25-.3.37-.45.12-.15.16-.25.25-.42.08-.17.04-.32-.02-.45-.07-.13-.56-1.34-.77-1.84-.2-.48-.4-.42-.56-.43-.14-.01-.3-.02-.46-.02s-.42.06-.65.3c-.23.25-.86.84-.86 2.05s.88 2.37 1 2.54c.13.16 1.74 2.66 4.22 3.73.59.25 1.05.39 1.4.5.59.19 1.12.16 1.54.1.47-.07 1.5-.61 1.7-1.2.21-.6.21-1.11.15-1.2-.06-.08-.22-.13-.47-.25z"/>
+    </svg>
+  </a>
 
 <script src="script.js"></script>
 
