--- a/iniciar sesion-registrarse.html
+++ b/iniciar sesion-registrarse.html
@@ -6,96 +6,134 @@
   <title>Cuenta WALOX</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    /* ======== ESTILO GLOBAL WALOX ======== */
     body {
-      font-family: 'Roboto', sans-serif;
-      background: #f5f5f5;
+      font-family: 'Poppins', sans-serif;
+      background: radial-gradient(circle at top, #1a0000, #000);
+      color: #fff;
       margin: 0;
       padding: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .container {
-      max-width: 400px;
-      margin: 60px auto;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      width: 95%;
+      max-width: 420px;
+      background: #0d0d0d;
+      border-radius: 16px;
+      box-shadow: 0 0 30px rgba(255, 0, 0, 0.25);
       overflow: hidden;
+      animation: fadeIn 0.8s ease;
     }
 
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* ======== TABS ======== */
     .tabs {
       display: flex;
-      background: #ff4e50;
+      background: linear-gradient(90deg, #700000, #b30000);
+      border-bottom: 1px solid #330000;
     }
 
     .tab {
       flex: 1;
       text-align: center;
-      padding: 12px 0;
+      padding: 14px 0;
       color: #fff;
+      font-weight: 600;
       cursor: pointer;
-      font-weight: bold;
+      letter-spacing: 0.5px;
       transition: background 0.3s;
     }
 
     .tab.active {
-      background: #e60000;
+      background: #ff1a1a;
+      box-shadow: inset 0 -2px 0 #fff;
     }
 
     .form-container {
-      padding: 30px;
+      padding: 32px 30px;
+      display: none;
+    }
+
+    .form-container.active {
+      display: block;
+      animation: slideIn 0.4s ease;
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .form-container h2 {
       text-align: center;
       color: #ff4e50;
       margin-bottom: 25px;
+      font-weight: 700;
     }
 
-    .form-container label {
+    label {
       display: block;
       margin-bottom: 5px;
-      font-weight: bold;
-    }
-
-    .form-container input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      font-weight: 600;
+      color: #ccc;
       font-size: 14px;
     }
 
-    .form-container button {
+    input {
       width: 100%;
       padding: 12px;
-      background: #ff4e50;
-      color: #fff;
+      margin-bottom: 18px;
       border: none;
       border-radius: 8px;
+      background: #1a1a1a;
+      color: #fff;
+      font-size: 15px;
+      outline: none;
+      border: 1px solid #333;
+      transition: border 0.3s;
+    }
+
+    input:focus {
+      border-color: #ff0000;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: linear-gradient(90deg, #ff0000, #660000);
+      color: #fff;
+      border: none;
+      border-radius: 10px;
       font-size: 16px;
+      font-weight: 600;
       cursor: pointer;
-      transition: 0.3s;
+      transition: background 0.3s, transform 0.2s;
     }
 
-    .form-container button:hover {
-      background: #e60000;
+    button:hover {
+      background: linear-gradient(90deg, #ff3333, #800000);
+      transform: translateY(-1px);
     }
 
-    #mensaje {
+    #mensaje, #loginMensaje {
       text-align: center;
       margin-top: 10px;
-      font-weight: bold;
+      font-weight: 600;
+      font-size: 14px;
     }
 
     @media (max-width: 500px) {
       .container {
-        margin: 40px 20px;
-        padding: 0;
-      }
-
-      .form-container {
-        padding: 20px;
+        width: 90%;
+        margin: 40px auto;
       }
     }
   </style>
@@ -110,14 +148,14 @@
     </div>
 
     <!-- LOGIN -->
-    <div class="form-container" id="login-form">
-      <h2>Iniciar sesión</h2>
+    <div class="form-container active" id="login-form">
+      <h2>Bienvenido a WALOX</h2>
       <form id="loginForm">
-        <label for="loginEmail">Correo electrónico:</label>
-        <input type="email" id="loginEmail" name="loginEmail" required placeholder="correo@ejemplo.com">
+        <label for="loginEmail">Correo electrónico</label>
+        <input type="email" id="loginEmail" required placeholder="correo@ejemplo.com">
 
-        <label for="loginPassword">Contraseña:</label>
-        <input type="password" id="loginPassword" name="loginPassword" required placeholder="Tu contraseña">
+        <label for="loginPassword">Contraseña</label>
+        <input type="password" id="loginPassword" required placeholder="Tu contraseña">
 
         <button type="submit">Iniciar sesión</button>
       </form>
@@ -125,20 +163,20 @@
     </div>
 
     <!-- REGISTRO -->
-    <div class="form-container" id="registro-form" style="display:none;">
+    <div class="form-container" id="registro-form">
       <h2>Crear cuenta WALOX</h2>
       <form id="registroForm">
-        <label for="nombre">Nombre completo:</label>
-        <input type="text" id="nombre" name="nombre" required placeholder="Juan Pérez">
+        <label for="nombre">Nombre completo</label>
+        <input type="text" id="nombre" required placeholder="Juan Pérez">
 
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email" required placeholder="correo@ejemplo.com">
+        <label for="email">Correo electrónico</label>
+        <input type="email" id="email" required placeholder="correo@ejemplo.com">
 
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required minlength="6" placeholder="Mínimo 6 caracteres">
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" required minlength="6" placeholder="Mínimo 6 caracteres">
 
-        <label for="confirmPassword">Confirmar contraseña:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required minlength="6" placeholder="Repite tu contraseña">
+        <label for="confirmPassword">Confirmar contraseña</label>
+        <input type="password" id="confirmPassword" required minlength="6" placeholder="Repite tu contraseña">
 
         <button type="submit">Registrarse</button>
       </form>
@@ -156,15 +194,15 @@
     tabLogin.addEventListener('click', () => {
       tabLogin.classList.add('active');
       tabRegistro.classList.remove('active');
-      loginFormContainer.style.display = 'block';
-      registroFormContainer.style.display = 'none';
+      loginFormContainer.classList.add('active');
+      registroFormContainer.classList.remove('active');
     });
 
     tabRegistro.addEventListener('click', () => {
       tabRegistro.classList.add('active');
       tabLogin.classList.remove('active');
-      registroFormContainer.style.display = 'block';
-      loginFormContainer.style.display = 'none';
+      registroFormContainer.classList.add('active');
+      loginFormContainer.classList.remove('active');
     });
 
     // ====== LOGIN ======
@@ -180,12 +218,15 @@
       const usuario = usuarios.find(u => u.email === email && u.password === password);
 
       if(usuario){
-        loginMensaje.style.color = "green";
-        loginMensaje.textContent = "✅ Inicio de sesión exitoso!";
-        loginForm.reset();
+        localStorage.setItem('usuarioActivo', JSON.stringify(usuario));
+        loginMensaje.style.color = "#00ff88";
+        loginMensaje.textContent = "Inicio de sesión exitoso";
+        setTimeout(() => {
+          window.location.href = "index.html";
+        }, 1000);
       } else {
-        loginMensaje.style.color = "red";
-        loginMensaje.textContent = "❌ Usuario o contraseña incorrectos.";
+        loginMensaje.style.color = "#ff4444";
+        loginMensaje.textContent = "Usuario o contraseña incorrectos";
       }
     });
 
@@ -202,24 +243,24 @@
       const confirmPassword = document.getElementById('confirmPassword').value;
 
       if(password !== confirmPassword) {
-        mensaje.style.color = "red";
-        mensaje.textContent = "❌ Las contraseñas no coinciden.";
+        mensaje.style.color = "#ff4444";
+        mensaje.textContent = "Las contraseñas no coinciden";
         return;
       }
 
       let usuarios = JSON.parse(localStorage.getItem('usuarios')) || [];
       const existe = usuarios.some(u => u.email === email);
       if(existe) {
-        mensaje.style.color = "red";
-        mensaje.textContent = "❌ Este correo ya está registrado.";
+        mensaje.style.color = "#ff4444";
+        mensaje.textContent = "Este correo ya está registrado";
         return;
       }
 
       usuarios.push({ nombre, email, password });
       localStorage.setItem('usuarios', JSON.stringify(usuarios));
 
-      mensaje.style.color = "green";
-      mensaje.textContent = "✅ Registro exitoso!";
+      mensaje.style.color = "#00ff88";
+      mensaje.textContent = "Cuenta creada con éxito";
       registroForm.reset();
     });
   </script>
